2009-01-19  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Added doc for --bt-hash-check-seed option.
	* doc/aria2c.1.txt
	
2009-01-19  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Documented exit codes.
	* doc/aria2c.1.txt

2009-01-18  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Added --bt-max-peers option to specify the maximum number of peers
	per torrent. 0 means unlimited number of peers.
	* src/ActivePeerConnectionCommand.cc
	* src/BtRuntime.h
	* src/DefaultPeerStorage.cc
	* src/DefaultPeerStorage.h
	* src/OptionHandlerFactory.cc
	* src/RequestGroup.cc
	* src/option_processing.cc
	* src/prefs.cc
	* src/prefs.h
	* src/usage_text.h
	* test/DefaultPeerStorageTest.cc

2009-01-18  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Added --bt-hash-check-seed option.  If true is given to this
	option, after hash check using --check-integrity option and file
	is complete, continue to seed file. If you want to check file and
	download it only when it is damaged or incomplete, set this option
	to false.  This option has effect only on BitTorrent download.
	The default value is true(This is the same behavior with the
	previous release).
	* src/BtCheckIntegrityEntry.cc
	* src/OptionHandlerFactory.cc
	* src/option_processing.cc
	* src/prefs.cc
	* src/prefs.h
	* src/usage_text.h

2009-01-18  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Updated copyright year.
	* src/version_usage.cc

2009-01-16  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Rewritten the usage text for --bt-request-peer-speed-limit option.
	* doc/aria2c.1.txt
	* src/usage_text.h

2009-01-16  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Made the max value of split option unlimited.
	* doc/aria2c.1.txt
	* src/OptionHandlerFactory.cc

2009-01-16  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Fixed compile warning/error.
	* src/DownloadResult.h
	* src/HttpDownloadCommand.cc
	* src/ServerStat.cc