@@ -947,6 +947,16 @@ writes the piece to the appropriate files.</td>
 </p>
 </dd>
 <dt>
+<strong>--bt-max-peers</strong>=NUM
+</dt>
+<dd>
+<p>
+  Specify the maximum number of peers per torrent.  <em>0</em> means
+  unlimited.  See also <strong>--bt-request-peer-speed-limit</strong> option.
+  Default: <em>55</em>
+</p>
+</dd>
+<dt>
 <strong>--bt-min-crypto-level</strong>=<em>plain</em>|<em>arc4</em>
 </dt>
 <dd>
@@ -2164,7 +2174,7 @@ files in the program, then also delete it here.</p></div>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2009-01-19 22:55:07 JST
+Last updated 2009-01-19 22:58:36 JST
 </div>
 </div>
 </body>
